--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir ./docs/"
+    "build": "parcel build src/index.html --out-dir ./docs/ --public-url ./"
   },
   "author": "benjamin habert",
   "license": "ISC",
