watch static data to reload

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "staticPath": [
       {
         "staticPath": "src/levels",
-        "staticOutDir": "levels/"
+        "staticOutDir": "levels/",
+        "watcherGlob": "**"
       }
     ]
   }
