--- a/package.json
+++ b/package.json
@@ -11,9 +11,20 @@
   "author": "benjamin habert",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.5.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "p5": "^1.1.9"
+  },
+  "staticFiles": {
+    "staticPath": [
+      {
+        "staticPath": "src/levels",
+        "staticOutDir": "levels/",
+        "watcherGlob": "**"
+      }
+    ]
   }
 }
