--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html --out-dir ./docs/ --public-url ./"
+    "dev": "parcel src/index.html --public-url ./",
+    "build": "rm -rf docs/; parcel build src/index.html --out-dir ./docs/ --public-url ./"
   },
   "author": "benjamin habert",
   "license": "ISC",
